resources/css/fab.css
/**
 * webtrees: online genealogy
 * Copyright (C) 2019 webtrees development team
 * This program is free software: you can redistribute it and/or modify
 * it under the terms of the GNU General Public License as published by
 * the Free Software Foundation, either version 3 of the License, or
 * (at your option) any later version.
 * This program is distributed in the hope that it will be useful,
 * but WITHOUT ANY WARRANTY; without even the implied warranty of
 * MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE. See the
 * GNU General Public License for more details.
 * You should have received a copy of the GNU General Public License
 * along with this program. If not, see <http://www.gnu.org/licenses/>.
 */

/* The FAB theme */
@import "_base.css";
@import "_block-charts.css";
@import "_chart-ancestors.css";
@import "_chart-compact.css";
@import "_chart-descendants.css";
@import "_chart-family-book.css";
@import "_chart-fan.css";
@import "_chart-hourglass.css";
@import "_chart-interactive.css";
@import "_chart-lifespans.css";
@import "_chart-pedigree.css";
@import "_chart-pedigree-map.css";
@import "_chart-relationships.css";
@import "_chart-statistics.css";
@import "_chart-timeline.css";
@import "_list-branches.css";
@import "_list-individuals.css";
@import "_list-media.css";
@import "_list-notes.css";
@import "_list-places.css";
@import "_list-repositories.css";
@import "_list-sources.css";
@import "_mime-type-icons.css";
@import "_on-screen-keyboard.css";
@import "_tab-relatives.css";

/* Colors for chart boxes, etc. */
:root {
  --sex-f-fg: #ffdddd;
  --sex-m-fg: #ddddff;
  --sex-u-fg: #ddffdd;
  --sex-f-bg: #ffdddd;
  --sex-m-bg: #ddddff;
  --sex-u-bg: #ddffdd;
	--chart-line: solid gray thin;
}

/* Override Bootstrap formatting */
.btn-link {
	padding-left: 0.25rem;
	padding-right: 0.25rem;
}

.table-given-name {
    overflow-x: hidden;
}

.container-fluid {
    padding-left: 5px;
    padding-right: 5px;
}

table {
	border-collapse: separate;
}

/*
 * Pages have the following high-level structure:
 *
 * wt-global wt-theme-<THEME> wt-route-<ROUTE>
 * +---wt-header-wrapper
 * |   +---wt-header-container
 * |       +---wt-header-content
 * |           +---wt-accessibility-links
 * |           +---wt-site-logo
 * |           +---wt-site-title
 * |           +---wt-header-search
 * |           |   +---wt-header-search-form
 * |           |       +---wt-header-search-field
 * |           |       +---wt-header-search-button
 * |           +---wt-secondary-navigation
 * |           |   +---wt-user-menu
 * |           +---wt-primary-navigation
 * |               +---wt-genealogy-menu
 * +---wt-main-wrapper
 * |   +---wt-main-container
 * |       +---wt-main-content
 * |           +---wt-messages
 * |           +---wt-page-title
 * |           +---wt-page-options wt-page-options-xxxxx
 * |           +---wt-page-content
 * +---wt-footers
 *     +---wt-footer wt-footer-contact
 *     +---wt-footer wt-footer-cookies
 *     +---wt-footer wt-footer-page-views
 *     +---wt-footer wt-footer-powered-by
 */

.wt-global {
	color: #555;
}

.wt-header-wrapper {
}

.wt-header-container {
	background-color: #eee;
}

.wt-header-content {
}

.wt-accessibility-links {
}

.wt-site-logo {
	display: none;
}

.wt-site-title {
	order: 1;
	flex: 1 1 0;
	font-size: 1.5rem;
	color: #888;
}

.wt-header-search {
	order: 3;
	flex: 0 0 15rem;
}

.wt-header-search-form {
}

.wt-header-search-field {
}

.wt-header-search-button {
}

.wt-secondary-navigation {
	order: 2;
	flex: 0 0 0;
	white-space: nowrap;
}

.wt-user-menu {
	flex-wrap: nowrap;
}

.wt-user-menu .nav-link {
	display: inline-block;
	padding: 0.5rem;
}

.wt-user-menu .nav-item::after {
	content: "|";
}

.wt-user-menu .dropdown-toggle::after {
	display: none;
}

.wt-primary-navigation {
	order: 4;
	flex: 0 0 100%;
	background-color: #eee;
}

.wt-genealogy-menu {
	justify-content: center;
}

.wt-genealogy-menu .dropdown-toggle::after {
	display: none;
}

.wt-genealogy-menu .nav-link {
	white-space: nowrap;
	display: inline-block;
	padding: 0.5rem;
}

.wt-genealogy-menu .nav-item + .nav-item::before {
	content: "|";
}

.wt-main-container {
	/* Space between the header/footer and the main content. */
	padding-top: 1rem;
	padding-bottom: 1rem;
}

.wt-main {
}

.wt-messages {
}

.wt-page-title {
	text-align: center;
}

.wt-page-options .form-group {
    margin-bottom: 0;
}

.wt-page-options-label {
	background-color: #ccc;
	border-left: 2px solid transparent;
	border-right: 2px solid transparent;
	Color: #555;
	font-weight: bold;
}

.wt-page-options-value {
	background-color: #ddd;
	border: 1px solid #fff;
	border-top: 1px solid #ddd;

	padding: 0.25rem 0.75rem;
}

.wt-page-content {
	margin-top: 1rem;
}

.wt-footers {
}

.wt-footer {
}

.wt-footer-contact {
}

.wt-footer-cookies {
	background: #aaa;
	color: #fff;
	transition: height 0.5s;
}

.wt-footer-page-views {
}

.wt-footer-powered-by {
}

.wt-footer-powered-by-webtrees {
	width: 100px;
	height: 21px;
	content: url(images/powered-by-webtrees.png);
}

/*
 * The tree/user home pages
 *
 * wt-home-page / wt-user-page
 * +---wt-main-blocks
 * |   +---wt-block, wt-block-AAA
 * |   +---wt-block, wt-block-BBB
 * |   +---wt-block, wt-block-CCC
 * +---wt-side-blocks
 *     +---wt-block, wt-block-XXX
 *     +---wt-block, wt-block-YYY
 *     +---wt-block, wt-block-ZZZ
 *
 * Each block as the structure
 * wt-block, wt-block-XXX
 * +---wt-block-header, wt-block-header-XXX
 * +---wt-block-content, wt-block-content-XXX
 */

.wt-block {
	background-color: #eee;
	padding: 3px;
	vertical-align: top;
}

.wt-block-header {
	background-color: #eee;
	border-bottom: 0;
	font-weight: bold;
}

.wt-block-content {
}

.wt-block-content .list_table {
	border-spacing: 1px;
	border: solid #000 1px;
	border-right: 0;
}

.wt-block-content .list_value,
.wt-block-content .list_value_wrap {
	border: 0;
}
/* ... */

